--- a/test.html
+++ b/test.html
@@ -10,5 +10,6 @@
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste, illum.
     </p>
+    <h1 class="colorful">HELLO</h1>
   </body>
 </html>
