--- a/index.html
+++ b/index.html
@@ -1,54 +1,52 @@
 <!DOCTYPE html>
-<html lang = "et">
-    <head>
-        <style>
-            table, th, td {
-            border: 1px solid rgb(30, 160, 48);
-            }
-            p{color:rgb(255, 0, 128)}
-        </style>
-        <title>
-            Võrkpall
-        </title>
-    </head>
-    <body>
-        <h1>
-            võrkpall
-        </h1>
-        <p style="color:blue">
-           Räägin mida võrkpallist
-
-        </p>
-        <br>
-        <a href="https://en.wikipedia.org/wiki/Volleyball">Link võrkpalli Wikipeedia lehele</a>
-        <img src="vorkpall.jpg" alt=" Võrkpall">
-        <h2>
-            Midagi veel võrkpallist
-        </h2>
-        <ul>
-            <li>pall </li>
-            <li>rand </li>
-            <li>pall </li>
-        </ul>
-        <table >
-
-            <tr>
-              <th>Esimne tulp</th>
-              <th>Teine tulp</th>
-              <th>Kolmas tulp</th>
-            </tr>
-            <tr>
-              <td>Pall1</td>
-              <td>Pall2</td>
-              <td>Pall3</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>2</td>
-              <td>3</td>
-            </tr>
-          </table>
-          <a href="teine.html">Link võrkpalli Wikipeedia lehele</a>
-
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <ul>
+      <li>
+        <td>
+          Võib lisada rohkem selliseid nuppe veel selle alla, et n-ö alateemasid
+          rõhutada
+        </td>
+      </li>
+      <li>
+        <td>
+          Lahe oleks, kui paigaldaksime visuaalid, nt. mida skalaarkorrutis
+          näivalt representeerib
+        </td>
+      </li>
+      <li>
+        <td>
+          Muidugi mata valemid ka, aga võiksid olla teistsuguse backgroundiga,
+          et neid rõhutada
+        </td>
+      </li>
+    </ul>
+    <button type="button" class="btn">Vektorid ja tasand</button>
+    <div class="vektorid">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+        delectus.
+      </p>
+    </div>
+    <button type="button" class="btn">Funktsioonid ja diferentsiaal</button>
+    <div class="vektorid">
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio, maxime.
+      </p>
+    </div>
+    <button type="button" class="btn">Maatriksid</button>
+    <div class="vektorid">
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio, maxime.
+      </p>
+    </div>
+  </body>
+  <script src="index.js"></script>
 </html>
