--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
   <body>
     <div class="navbar">
       <h1>MafHelp</h1>
-      <button class="but"></button>
+      <button class="navB"></button>
+      <div>
+        <button class="navSubB"></button>
+        <button class="navSubB"></button>
+      </div>
+      <button class="navB"></button>
+      <div>
+        <button class="navSubB"></button>
+        <button class="navSubB"></button>
+      </div>
+      <button class="navB"></button>
+      <div>
+        <button class="navSubB"></button>
+        <button class="navSubB"></button>
+      </div>
     </div>
     <div class="sisu">
       <button type="button" class="btn">Vektorid ja tasand</button>
@@ -37,5 +51,11 @@
       </div>
     </div>
   </body>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script
+    id="MathJax-script"
+    async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+  ></script>
   <script src="index.js"></script>
 </html>
