--- a/index.html
+++ b/index.html
@@ -6,35 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <!--<link rel="stylesheet" href="index.css" />-->
   </head>
   <body>
-    <!--Lisada mediaquery, selleks, kui ekraan liiga väikesks läheb 950x580-->
-    <div class="navbar">
-      <h1>MafHelp</h1>
-      <div class="navDB">
-        <div class="navB">
-          <button class="navTeema">Vektorid & tasandid</button>
-          <div>
-            <button class="navAlaTeema">Eksamiteemad</button>
-            <button class="navAlaTeema">Näidisülesanded</button>
-          </div>
-        </div>
-        <div class="navB">
-          <button class="navTeema">Funktsioonid</button>
-          <div>
-            <button class="navAlaTeema">Eksamiteemad</button>
-            <button class="navAlaTeema">Näidisülesanded</button>
-          </div>
-        </div>
-        <div class="navB">
-          <button class="navTeema">Maatriksid</button>
-          <div>
-            <button class="navAlaTeema">Eksamiteemad</button>
-            <button class="navAlaTeema">Näidisülesanded</button>
-          </div>
-        </div>
-      </div>
+    <ul>
+      <li>
+        <td>
+          Võib lisada rohkem selliseid nuppe veel selle alla, et n-ö alateemasid
+          rõhutada
+        </td>
+      </li>
+      <li>
+        <td>
+          Lahe oleks, kui paigaldaksime visuaalid, nt. mida skalaarkorrutis
+          näivalt representeerib
+        </td>
+      </li>
+      <li>
+        <td>
+          Muidugi mata valemid ka, aga võiksid olla teistsuguse backgroundiga,
+          et neid rõhutada
+        </td>
+      </li>
+    </ul>
+    <button type="button" class="btn">Vektorid ja tasand</button>
+    <div class="vektorid">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda,
+        delectus.
+      </p>
+    </div>
+    <button type="button" class="btn">Funktsioonid ja diferentsiaal</button>
+    <div class="vektorid">
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio, maxime.
+      </p>
+    </div>
+    <button type="button" class="btn">Maatriksid</button>
+    <div class="vektorid">
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio, maxime.
+      </p>
     </div>
   </body>
+  <script src="index.js"></script>
 </html>
