Koduleht pmst lõplik

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <!--<link rel="stylesheet" href="index.css" />-->
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <!--Lisada mediaquery, selleks, kui ekraan liiga väikesks läheb 950x580-->
@@ -15,6 +15,13 @@
       <div class="navDB">
         <div class="navB">
           <button class="navTeema">Vektorid & tasandid</button>
+          <div>
+            <button class="navAlaTeema">Eksamiteemad</button>
+            <button class="navAlaTeema">Näidisülesanded</button>
+          </div>
+        </div>
+        <div class="navB">
+          <button class="navTeema">Kompleksarvud</button>
           <div>
             <button class="navAlaTeema">Eksamiteemad</button>
             <button class="navAlaTeema">Näidisülesanded</button>
@@ -35,6 +42,11 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="sisu">
+      <div class="image"></div>
+      <h1>Maths guidance from undergrads</h1>
+      <h1>for undergrads</h1>
     </div>
   </body>
 </html>
