Kodulehe lõplik disain

--- a/index.html
+++ b/index.html
@@ -9,44 +9,64 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <!--Lisada mediaquery, selleks, kui ekraan liiga väikesks läheb 950x580-->
+    <!--Lisada mediaquery, selleks, kui ekraan liiga väikesks läheb 1020x???-->
     <div class="navbar">
       <h1>MafHelp</h1>
       <div class="navDB">
         <div class="navB">
           <button class="navTeema">Vektorid & tasandid</button>
           <div>
-            <button class="navAlaTeema">Eksamiteemad</button>
-            <button class="navAlaTeema">Näidisülesanded</button>
+            <button class="navAlaTeema">Vektorid ruumis</button>
+            <button class="navAlaTeema">Sirge & tasand ruumis</button>
           </div>
         </div>
         <div class="navB">
           <button class="navTeema">Kompleksarvud</button>
           <div>
-            <button class="navAlaTeema">Eksamiteemad</button>
-            <button class="navAlaTeema">Näidisülesanded</button>
+            <button class="navAlaTeema">
+              Trigonomeetriline- & Algebralinekuju
+            </button>
+            <button class="navAlaTeema">Eksponentkuju</button>
           </div>
         </div>
         <div class="navB">
           <button class="navTeema">Funktsioonid</button>
           <div>
-            <button class="navAlaTeema">Eksamiteemad</button>
-            <button class="navAlaTeema">Näidisülesanded</button>
+            <button class="navAlaTeema">Funktsioonid</button>
+            <button class="navAlaTeema">Piirväärtus & pidevus</button>
+            <button class="navAlaTeema">Tuletis & Diferentsiaal</button>
+            <button class="navAlaTeema">Funktsiooni uurimine</button>
+          </div>
+        </div>
+        <div class="navB">
+          <button class="navTeema">Integraal</button>
+          <div>
+            <button class="navAlaTeema">Algfunktsioon</button>
+            <button class="navAlaTeema">Diferentsiaal-võrrandid</button>
+            <button class="navAlaTeema">Pindala</button>
+            <button class="navAlaTeema">Määratud integraal</button>
+            <button class="navAlaTeema">Rakendused</button>
+            <button class="navAlaTeema">Päratud integraalid</button>
           </div>
         </div>
         <div class="navB">
           <button class="navTeema">Maatriksid</button>
           <div>
-            <button class="navAlaTeema">Eksamiteemad</button>
-            <button class="navAlaTeema">Näidisülesanded</button>
+            <button class="navAlaTeema">Maatriksid & Determinandid</button>
+            <button class="navAlaTeema">
+              Pöördmaatriks & lineaar-võrrandisüsteem
+            </button>
           </div>
         </div>
       </div>
     </div>
     <div class="sisu">
       <div class="image"></div>
-      <h1>Maths guidance from undergrads</h1>
-      <h1>for undergrads</h1>
+      <div class="text">
+        <h1>Maths guidance for undergrads</h1>
+        <br />
+        <h1>from undergrads</h1>
+      </div>
     </div>
   </body>
 </html>
