Karli ja Karmo lehed

--- a/Funktsioonid.html
+++ b/Funktsioonid.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="funktisioonid.css" />
-      <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" href="vektorid.css">
+    <link rel="stylesheet" href="content.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/katex.min.css"
@@ -35,29 +33,60 @@
         <div class="navB">
           <button class="navTeema">Vektorid & tasandid</button>
           <div>
-            <button class="navAlaTeema">Eksamiteemad</button>
-            <button class="navAlaTeema">Näidisülesanded</button>
+            <button
+              class="navAlaTeema"
+              onclick="window.location.href='Vektorid.html'"
+            >
+              Vektorid ruumis
+            </button>
+            <button
+              class="navAlaTeema"
+              onclick="window.location.href='Tasandid.html'"
+            >
+              Sirge & tasand ruumis
+            </button>
           </div>
         </div>
         <div class="navB">
           <button class="navTeema">Kompleksarvud</button>
           <div>
-            <button class="navAlaTeema">Eksamiteemad</button>
-            <button class="navAlaTeema">Näidisülesanded</button>
+            <button
+              class="navAlaTeema"
+              onclick="window.location.href='Kompleks.html'"
+            >
+              Trigonomeetriline- & Algebraline & Eksponentkuju
+            </button>
           </div>
         </div>
         <div class="navB">
           <button class="navTeema">Funktsioonid</button>
           <div>
-            <button class="navAlaTeema">Eksamiteemad</button>
-            <button class="navAlaTeema">Näidisülesanded</button>
+            <button class="navAlaTeema">Funktsioonid</button>
+            <button class="navAlaTeema">Piirväärtus & pidevus</button>
+            <button class="navAlaTeema">Tuletis & Diferentsiaal</button>
+            <button class="navAlaTeema">Funktsiooni uurimine</button>
+          </div>
+        </div>
+        <div class="navB">
+          <button class="navTeema">Integraal</button>
+          <div>
+            <button class="navAlaTeema">Algfunktsioon</button>
+            <button class="navAlaTeema">Diferentsiaal-võrrandid</button>
+            <button class="navAlaTeema">Pindala</button>
+            <button class="navAlaTeema">Määratud integraal</button>
+            <button class="navAlaTeema">Rakendused</button>
+            <button class="navAlaTeema">Päratud integraalid</button>
           </div>
         </div>
         <div class="navB">
           <button class="navTeema">Maatriksid</button>
           <div>
-            <button class="navAlaTeema">Eksamiteemad</button>
-            <button class="navAlaTeema">Näidisülesanded</button>
+            <button
+              class="navAlaTeema"
+              onclick="window.location.href='Maatriksid.html'"
+            >
+              Maatriksid & Determinandid
+            </button>
           </div>
         </div>
       </div>
